fix: complete audit — all bugs resolved across all 5 files
- requirements.txt: pin transformers==5.1.0, trl==0.27.1 (Feb 2026 release),
  datasets==4.3.0, huggingface_hub>=0.34.0; remove vllm; add sentencepiece/protobuf
- config.py: fix BASELINE_MODEL (Providers-compatible), remove dead WARMUP_RATIO,
  split into SFT/GRPO warmup steps, remove GPU_MEMORY_UTIL (invalid kwarg)
- 02_train_grpo.py: fix chat_template via .replace() per notebook cell 13,
  add SFT warmup step (cells 16-32, OpenMathReasoning-mini),
  fix from_pretrained kwargs, fix get_peft_model (random_state=3407),
  add token= to load_dataset, guard for empty dataset
- 03_evaluate.py: fix chat_template .replace(), load_in_4bit=False for MoE,
  fix extract_answer comma handling, add source-breakdown, token= to load_dataset
- 01_prepare_data.py: filter out MATH items with empty answer_number

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,34 @@
+# ============================================================
+# requirements.txt
+# Version pins match the Unsloth Feb-2026 release:
+#   transformers==5.1.0 + trl==0.27.1 are the latest verified pair.
+# DO NOT upgrade without testing — GRPOTrainer API changes between versions.
+# ============================================================
+
+# Unsloth — always install from git for latest MoE Triton kernel fixes
 unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git
-vllm
-trl
-datasets
-huggingface_hub
+
+# Pinned core deps (from Unsloth Feb-2026 release notes)
+transformers==5.1.0
+trl==0.27.1
+datasets==4.3.0
+"huggingface_hub>=0.34.0"
+
+# Required for Qwen3 tokenizer
+sentencepiece
+protobuf
+
+# Training & evaluation utilities
 torch
 torchvision
 pillow
 matplotlib
 pandas
+numpy
 tqdm
 python-dotenv
+
+# NOTE: vllm is NOT installed.
+# MoE fast_inference is not yet supported, so use_vllm=False in training.
+# If you later switch to a dense model with fast_inference=True, add:
+#   pip install vllm
